# OfflineMovieDatabase

./: CMakeLists.txt  Movie.cpp  Movie.h  MovieDatabase.cpp  MovieDatabase.h  MovieLink.h  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
